# macroquad-fun

./: .gitattributes  .gitignore  Cargo.toml  README.md  build-wasm.sh  convert-wav-to-mp3.sh  convert-wav-to-ogg.sh  dist-wasm.sh  index.html  macroquad-fun  macroquad-fun.bat  package-lock.json  package.json
.cargo/: config.toml
media/: bigbrick1.aseprite  config.json  gem.aseprite  world.ldtk
media/FlyingEye/: Flight.aseprite  Flight.json
media/Huntress/: Idle.aseprite  Idle.json  Spear move.aseprite  Spear move.json
media/Huntress/Sprites/: Idle.aseprite  Idle.json
media/Mushroom/: Death.aseprite  Death.json  Idle.aseprite  Idle.json
media/audio/: FlyingEyeAttach.bfxrsound  FoundSecret.bfxrsound  GemPickup.bfxrsound  Jump6.bfxrsound  MushroomRez.bfxrsound  Pickup_Coin2.bfxrsound  SpearPickup.bfxrsound  Switch.bfxrsound  SwitchOff.bfxrsound  SwitchOn.bfxrsound  sfx.bfxrlibrary
media/audio/music/: Ditty-2023-01-07.flp  Ditty-2023-01-07_2.flp
media/audio/music/Backup/: Ditty-2023-01-07 (autosaved at 20h02).flp  Ditty-2023-01-07 (autosaved at 20h12).flp  Ditty-2023-01-07 (autosaved at 9h21).flp  (+6 more)
media/js/: analytics-dialog.js  audio-dialog.js  main.js
media/shaders/: crt.frag  replace_color.frag
server/: Cargo.toml  build-tarball.sh  deploy.sh
server/src/: main.rs
src/: animator.rs  aseprite.rs  attachment.rs  audio.rs  camera.rs  cli.rs  collision.rs  config.rs  crate_entity.rs  debug_mode.rs  drawing.rs  dynamic_collider.rs  dynamic_platform.rs  entity.rs  floor_switch.rs  flying_eye.rs  font.rs  foreground_tiles.rs  fps.rs  game_assets.rs  game_sprites.rs  gem_counter.rs  hex_color.rs  hierarchy.rs  input.rs  js_interop.rs  ldtk.rs  ldtk_full_unused.rs  level.rs  level_runtime.rs  life_transfer.rs  main.rs  materials.rs  math_util.rs  moving_platform.rs  mushroom.rs  physics.rs  pickups.rs  player.rs  push.rs  (+18 more)
(+1 files in other folders)
