[package]
edition = "2021"
name = "macroquad-fun"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
bitflags = "1.3.2"
macroquad = "0.3.24"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = {version = "4.0.18", features = ["derive"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
