[package]
edition = "2021"
name = "macroquad-fun"
version = "0.1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
argh = "0.1.9"
bitflags = "1.3.2"
heapless = "0.7.16"
macroquad = "0.3.24"
postcard = {version = "1.0.2", default-features = false}
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
uuid = {version = "1.2.1", features = ["serde"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
